jump fixxed

--- a/css/styles.css
+++ b/css/styles.css
@@ -37,7 +37,7 @@
     bottom: 0;
     width: 100px;
     left: 0;
-    animation: mario-animation 3s infinite linear;
+    animation: mario-jump 2s infinite linear;
 }
 
 @keyframes mario-jump {
